Fix text alignment in data table sort headers

--- a/framework/components/ADataTable/ADataTable.scss
+++ b/framework/components/ADataTable/ADataTable.scss
@@ -43,6 +43,8 @@ $hidden-table-col-width: 45px;
   &__header {
     &__sort {
       &__button {
+        display: flex;
+        align-items: center;
         outline: none;
         font-family: inherit !important;
         font-weight: inherit !important;
@@ -56,7 +58,7 @@ $hidden-table-col-width: 45px;
       }
       &.a-icon {
         vertical-align: middle;
-        width: 18px;
+        width: 20px;
       }
     }
   }
